area_de_trabalho

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Area de Trabalho</title>
 </head>
 <body>
-    <div class="principal"></div>
+    <div class="principal">
+        <div class="aplicativos">
+            <div class="card">
+                <img src="./Img/lixeira-de-reciclagem.png" alt="icone_de_lixeira">
+                <p>Reciclagem</p>
+            </div>
+            <div class="card">
+                <img src="./Img/cromada.png" alt="icone_de_cromada" onclick="openWindows()">
+                <p>Google Chrome</p>
+            </div>
+        </div>
+    </div>
     <div class="barra">
         <div class="clima">
             <img src="./Img/icone_sol.png" alt="icone de sol">
@@ -18,8 +29,6 @@
             <img src="./Img/lupa.png" alt="icone_de_lupa">
             <img src="./Img/pasta.png" alt="icone_de_pasta">
             <img src="./Img/cromada.png" alt="icone_de_cromada">
-            <img src="./Img/github.png" alt="icone_da_github">
-            <img src="./Img/vscode.png" alt="icone_do_vscode">
         </div>
         <div class="icones2">
             <img src="./Img/wi-fi.png" alt="icone_de_wifi">
@@ -30,6 +39,6 @@
             <p id="tempo">12:00:00</p>
         </div>
     </div>
-    <script src="./JS/relogio.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
